--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -46,7 +46,7 @@
 
         <div class="TexAlLeft Wid100">
             <div class="uobBoldText">Total Expenses</div>
-            <div class="uobSubText">(Yearly)</div>
+            <div class="uobSubText">(Include your annual cost for Household, Family Expenses, Children’s Tuition, Mortgage, Holiday Travel and any other living cost)</div>
         </div>
         <p:inputNumber value="#{uobpb.totalExpense}"
                        styleClass="Wid100 uob_number_field" maxlength="15"
@@ -58,7 +58,7 @@
         <div class="EmptyBox10"></div>
         <div class="Wid100">
             <div class="uobBoldText">Total Debt</div>
-            <div class="uobSubText">(Yearly)</div>
+            <div class="uobSubText">(Include your Car Payments, Credit Card bills etc.)</div>
         </div>
         <p:inputNumber value="#{uobpb.totalLiability}"
                        styleClass="Wid100 uob_number_field" maxlength="15"
