--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -27,7 +27,7 @@
                                    actionListener="#{tdcto.selectAcctType(1)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel"  >
-                        <p:panel styleClass="Wid95 Fleft MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctypeindividual" styleClass="Wid95 Fleft MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>Individual</h4>
 
@@ -46,7 +46,7 @@
                                    actionListener="#{tdcto.selectAcctType(2)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
-                        <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctypejoint" styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>Joint</h4>
 
@@ -64,7 +64,7 @@
                                    actionListener="#{tdcto.selectAcctType(3)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
-                        <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctypeutma" styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>UTMA / UGMA</h4>
 
@@ -84,7 +84,7 @@
                                    actionListener="#{tdcto.selectAcctType(4)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
-                        <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctypeira" styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>Traditional IRA</h4>
 
@@ -104,7 +104,7 @@
                                    actionListener="#{tdcto.selectAcctType(5)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
-                        <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctyperoth" styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>Roth IRA</h4>
 
@@ -124,7 +124,7 @@
                                    actionListener="#{tdcto.selectAcctType(6)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
-                        <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctyperollira" styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>Rollover IRA</h4>
 
@@ -144,7 +144,7 @@
                                    actionListener="#{tdcto.selectAcctType(7)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
-                        <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
+                        <p:panel id="tcmacctypebeneira" styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
                                 <h4>Beneficiary IRA</h4>
 
