--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -19,38 +19,38 @@
                                       layout="pageDirection">
                         <p:ajax listener="#{tcmpb.onChangeValue}"
                                 update=":ceForm:inputArea"/>
-                        <f:selectItem itemLabel="Maximizing Current Income" itemValue="1" />
-                        <f:selectItem itemLabel="Emphasizing income with some potential for growth" itemValue="2" />
-                        <f:selectItem itemLabel="Emphasizing growth with some potential for income" itemValue="3" />
-                        <f:selectItem itemLabel="Growth" itemValue="4" />
-                        <f:selectItem itemLabel="Maximizing growth" itemValue="5" />
+                        <f:selectItem id="tcmp3mci" itemLabel="Maximizing Current Income" itemValue="1" />
+                        <f:selectItem id="tcmp3eipg" itemLabel="Emphasizing income with some potential for growth" itemValue="2" />
+                        <f:selectItem id="tcmp3egpi" itemLabel="Emphasizing growth with some potential for income" itemValue="3" />
+                        <f:selectItem id="tcmp3growth" itemLabel="Growth" itemValue="4" />
+                        <f:selectItem id="tcmp3mgrowth" itemLabel="Maximizing growth" itemValue="5" />
                     </p:selectOneRadio>
                 </div>
-                <p:message for="p3id" display="text"/>
+                <p:message id="tcmp3msg1" for="p3id" display="text"/>
             </div>
 
         <div class="EmptyBox5"></div>
-         <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(1) != null  and  !tcmpb.formPortfolioEdit }"
+         <p:panel id="tcmp3errormsg1" rendered="#{tcmpb.pagemanager.getErrorMessage(1) != null  and  !tcmpb.formPortfolioEdit }"
                   style="border: 0px; background: transparent"
                   styleClass="Container100">
-             <h:outputText styleClass="errorText"
+             <h:outputText id="tcmp3errortxt1" styleClass="errorText"
                            value="#{tcmpb.pagemanager.getErrorMessage(1)}" escape="false"/>
              <div class="EmptyBox5"></div>
          </p:panel>
-            <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(2) != null  and  tcmpb.formPortfolioEdit }"
+            <p:panel id="tcmp3errormsg2" rendered="#{tcmpb.pagemanager.getErrorMessage(2) != null  and  tcmpb.formPortfolioEdit }"
                      style="border: 0px; background: transparent"
                      styleClass="Container100">
-                <h:outputText styleClass="errorText"
+                <h:outputText id="tcmp3errortxt2" styleClass="errorText"
                               value="#{tcmpb.pagemanager.getErrorMessage(2)}" escape="false"/>
                 <div class="EmptyBox5"></div>
             </p:panel>
-        <p:commandLink styleClass="UI-prevButton Fleft" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
+        <p:commandLink id="tcmp3previousbtn" styleClass="UI-prevButton Fleft" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
                          update=":ceForm:inputArea"
                          immediate="true"
                          actionListener="#{tcmpb.prevPage}">
                          <h:outputText value="Previous" />
                          </p:commandLink>
-             <p:commandLink styleClass="UI-nextButton Fright UI-tcmButton"   rendered="#{tcmpb.pagemanager.nextButtonStat}"
+             <p:commandLink id="tcmp3nextbtn" styleClass="UI-nextButton Fright UI-tcmButton"   rendered="#{tcmpb.pagemanager.nextButtonStat}"
                          update=":ceForm:inputArea"
                          actionListener="#{tcmpb.nextPage}">
                          <h:outputText value="Next" />
