--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -20,37 +20,37 @@ hypothetical portfolios over a one year period.<br/>
 
                 <p:panel id="riskimgpanel" styleClass="Container100"
                          style="border: 0px; background: transparent;">
-                    <p:commandLink actionListener="#{tcmpb.riskSelected(1)}"
+                    <p:commandLink id="tcmp4lri1" actionListener="#{tcmpb.riskSelected(1)}"
                                    process="@this"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
-                        <img src="#{tcmpb.getRiskGraphic(1)}" class="riskImage"/>
+                        <img id="tcmp4ri1" src="#{tcmpb.getRiskGraphic(1)}" class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink actionListener="#{tcmpb.riskSelected(2)}"
+                    <p:commandLink id="tcmp4lri2" actionListener="#{tcmpb.riskSelected(2)}"
                                    process="@this"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
-                        <img src="#{tcmpb.getRiskGraphic(2)}"
+                        <img id="tcmp4ri2" src="#{tcmpb.getRiskGraphic(2)}"
                              class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink actionListener="#{tcmpb.riskSelected(3)}"
+                    <p:commandLink id="tcmp4lri3" actionListener="#{tcmpb.riskSelected(3)}"
                                    process="@this"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
-                        <img src="#{tcmpb.getRiskGraphic(3)}"
+                        <img id="tcmp4ri3" src="#{tcmpb.getRiskGraphic(3)}"
                              class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink actionListener="#{tcmpb.riskSelected(4)}"
+                    <p:commandLink id="tcmp4lri4" actionListener="#{tcmpb.riskSelected(4)}"
                                    process="@this"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
-                        <img src="#{tcmpb.getRiskGraphic(4)}"
+                        <img id="tcmp4ri4" src="#{tcmpb.getRiskGraphic(4)}"
                              class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink actionListener="#{tcmpb.riskSelected(5)}"
+                    <p:commandLink id="tcmp4lri5" actionListener="#{tcmpb.riskSelected(5)}"
                                    process="@this"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
-                        <img src="#{tcmpb.getRiskGraphic(5)}"
+                        <img id="tcmp4ri5" src="#{tcmpb.getRiskGraphic(5)}"
                              class="riskImage"/>
                     </p:commandLink>
                 </p:panel>
@@ -62,27 +62,27 @@ hypothetical portfolios over a one year period.<br/>
                 </h:outputText>
             </div>
         <div class="EmptyBox5"></div>
-            <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(2) != null  and  !tcmpb.formPortfolioEdit }"
+            <p:panel id="tcmp4errormsg1" rendered="#{tcmpb.pagemanager.getErrorMessage(2) != null  and  !tcmpb.formPortfolioEdit }"
                      style="border: 0px; background: transparent"
                      styleClass="Container100">
-                <h:outputText styleClass="errorText"
+                <h:outputText id="tcmp4errortxt1" styleClass="errorText"
                               value="#{tcmpb.pagemanager.getErrorMessage(2)}" escape="false"/>
                 <div class="EmptyBox5"></div>
             </p:panel>
-            <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(3) != null  and  tcmpb.formPortfolioEdit }"
+            <p:panel id="tcmp4errormsg2" rendered="#{tcmpb.pagemanager.getErrorMessage(3) != null  and  tcmpb.formPortfolioEdit }"
                      style="border: 0px; background: transparent"
                      styleClass="Container100">
-                <h:outputText styleClass="errorText"
+                <h:outputText id="tcmp4errortxt2" styleClass="errorText"
                               value="#{tcmpb.pagemanager.getErrorMessage(3)}" escape="false"/>
                 <div class="EmptyBox5"></div>
             </p:panel>
-        <p:commandLink styleClass="UI-prevButton Fleft" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
+        <p:commandLink id="tcmp4previousbtn" styleClass="UI-prevButton Fleft" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
                          update=":ceForm:inputArea"
                          immediate="true"
                          actionListener="#{tcmpb.prevPage}">
                          <h:outputText value="Previous" />
                          </p:commandLink>
-        <p:commandLink styleClass="UI-nextButton Fright UI-tcmButton" value="Next" rendered="#{tcmpb.pagemanager.nextButtonStat}"
+        <p:commandLink id="tcmp4nextbtn" styleClass="UI-nextButton Fright UI-tcmButton" value="Next" rendered="#{tcmpb.pagemanager.nextButtonStat}"
                          update=":ceForm:inputArea"
                          actionListener="#{tcmpb.nextPage}">
                          <h:outputText value="Next" />
