--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -25,22 +25,21 @@
         <div class="EmptyBox5"></div>
 
         <!-- Projection Slab  -->
-        <h:inputHidden value="#{tcmpb.riskCalculator.ans5}"/>
+        <h:inputHidden id="tcmp5hidden1" value="#{tcmpb.riskCalculator.ans5}"/>
 
         <div class="ContainerDropDownSizing">
-            <div
-                    class="ContainerPSlab-tcmUI MarAuto Fnone EnableDrodownProjection">
-                <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
+            <div class="ContainerPSlab-tcmUI MarAuto Fnone EnableDrodownProjection">
+                <p:selectOneMenu id="tcmp5ddriskcalc" styleClass="formpageDropdown FundAccountDropdownUI"
                                  value="#{tcmpb.riskCalculator.ans5}" style="width: 100%;">
                     <p:ajax listener="#{tcmpb.doProjectionChart}"
                             update=":ceForm:inputArea"/>
-                    <f:selectItem itemLabel="Select One" itemValue=""
+                    <f:selectItem id="tcmp5selectone" itemLabel="Select One" itemValue=""
                                   noSelectionOption="true"/>
-                    <f:selectItem itemLabel="Aggressive (Higher Risk)" itemValue="5"/>
-                    <f:selectItem itemLabel="Moderately Aggressive" itemValue="4"/>
-                    <f:selectItem itemLabel="Moderate" itemValue="3"/>
-                    <f:selectItem itemLabel="Moderately Conservative" itemValue="2"/>
-                    <f:selectItem itemLabel="Conservative (Lower Risk)" itemValue="1"/>
+                    <f:selectItem id="tcmp5aggressive" itemLabel="Aggressive (Higher Risk)" itemValue="5"/>
+                    <f:selectItem id="tcmp5maggressive" itemLabel="Moderately Aggressive" itemValue="4"/>
+                    <f:selectItem id="tcmp5moderate" itemLabel="Moderate" itemValue="3"/>
+                    <f:selectItem id="tcmp5mconservative" itemLabel="Moderately Conservative" itemValue="2"/>
+                    <f:selectItem id="tcmp5conservative" itemLabel="Conservative (Lower Risk)" itemValue="1"/>
                 </p:selectOneMenu>
             </div>
         </div>
@@ -56,7 +55,7 @@
 							Performance</span>
 
                         <div class="EmptyBox5"></div>
-						<span class="Fs17 DispBlock BBGreen"> <h:outputText
+						<span class="Fs17 DispBlock BBGreen"> <h:outputText id="tcmp5avgperformance"
                                 value="#{tcmpb.charts.chartdata.getIntChartData('AvgPerformance')}">
                             <f:convertNumber pattern="$#,###,###,##0"/>
                         </h:outputText>
@@ -71,7 +70,7 @@
                         <span class="Fs14 DispBlock gray">Poor Market Performance</span>
 
                         <div class="EmptyBox5"></div>
-						<span class="Fs17 DispBlock BBDarkGray"> <h:outputText
+						<span class="Fs17 DispBlock BBDarkGray"> <h:outputText id="tcmp5poorperformance"
                                 value="#{tcmpb.charts.chartdata.getIntChartData('PoorPerformance')}">
                             <f:convertNumber pattern="$#,###,###,##0"/>
                         </h:outputText>
@@ -81,7 +80,7 @@
             </div>
             <div class="EmptyBox5"></div>
             <h:inputHidden value="#{tcmpb.charts.chartdata.highChartresultSet}"
-                           id="projectionChart"/>
+                           id="projectionChart1"/>
 
             <div id="progressChart" class="Container100 Fright"></div>
         </div>
@@ -96,10 +95,10 @@
             </div>
             <div class="Container70">
                 <div class="EmptyBox5"></div>
-                <p:commandLink actionListener="#{tcmpb.setAnswer5(5)}"
+                <p:commandLink id="tcmp5aggbtn" actionListener="#{tcmpb.setAnswer5(5)}"
                                process="@this" styleClass="PSlabLink"
                                update=":ceForm:inputArea">
-                    <p:panel styleClass="PojectionSlabPanel">
+                    <p:panel id="tcmp5aggbtnlabel" styleClass="PojectionSlabPanel">
                         <div class="#{tcmpb.getAns5Tag2(5)}">
                             <span class="PSlabLabel">Aggressive</span>
                         </div>
@@ -108,10 +107,10 @@
                 </p:commandLink>
 
                 <div class="EmptyBox5"></div>
-                <p:commandLink actionListener="#{tcmpb.setAnswer5(4)}"
+                <p:commandLink id="tcmp5maggbtn" actionListener="#{tcmpb.setAnswer5(4)}"
                                process="@this" styleClass="PSlabLink"
                                update=":ceForm:inputArea">
-                    <p:panel styleClass="PojectionSlabPanel">
+                    <p:panel id="tcmp5maggbtnlabel" styleClass="PojectionSlabPanel">
 
                         <div class="#{tcmpb.getAns5Tag2(4)}">
                             <span class="PSlabLabel">Moderately Aggressive</span>
@@ -121,10 +120,10 @@
                 </p:commandLink>
 
                 <div class="EmptyBox5"></div>
-                <p:commandLink actionListener="#{tcmpb.setAnswer5(3)}"
+                <p:commandLink id="tcmp5modbtn" actionListener="#{tcmpb.setAnswer5(3)}"
                                process="@this" styleClass="PSlabLink"
                                update=":ceForm:inputArea">
-                    <p:panel styleClass="PojectionSlabPanel">
+                    <p:panel id="tcmp5modbtnlabel" styleClass="PojectionSlabPanel">
 
                         <div class="#{tcmpb.getAns5Tag2(3)}">
                             <span class="PSlabLabel">Moderate</span>
@@ -134,10 +133,10 @@
                 </p:commandLink>
 
                 <div class="EmptyBox5"></div>
-                <p:commandLink actionListener="#{tcmpb.setAnswer5(2)}"
+                <p:commandLink id="tcmp5mconbtn" actionListener="#{tcmpb.setAnswer5(2)}"
                                process="@this" styleClass="PSlabLink"
                                update=":ceForm:inputArea">
-                    <p:panel styleClass="PojectionSlabPanel">
+                    <p:panel id="tcmp5mconbtnlabel" styleClass="PojectionSlabPanel">
 
                         <div class="#{tcmpb.getAns5Tag2(2)}">
                             <span class="PSlabLabel">Moderately Conservative</span>
@@ -147,10 +146,10 @@
                 </p:commandLink>
 
                 <div class="EmptyBox5"></div>
-                <p:commandLink actionListener="#{tcmpb.setAnswer5(1)}"
+                <p:commandLink id="tcmp5conbtn" actionListener="#{tcmpb.setAnswer5(1)}"
                                process="@this" styleClass="PSlabLink"
                                update=":ceForm:inputArea">
-                    <p:panel styleClass="PojectionSlabPanel">
+                    <p:panel id="tcmp5conbtnlabel" styleClass="PojectionSlabPanel">
 
                         <div class="#{tcmpb.getAns5Tag2(1)}">
                             <span class="PSlabLabel">Conservative</span>
@@ -171,31 +170,31 @@
 
         </h3>
         <div class="EmptyBox20"></div>
-        <p:panel
+        <p:panel id="tcmp5errormsg1"
                 rendered="#{tcmpb.pagemanager.getErrorMessage(3) != null  and  !tcmpb.formPortfolioEdit }"
                 style="border: 0px; background: transparent"
                 styleClass="Container100">
-            <h:outputText styleClass="errorText"
+            <h:outputText id="tcmp5errortxt1" styleClass="errorText"
                           value="#{tcmpb.pagemanager.getErrorMessage(3)}" escape="false"/>
         </p:panel>
 
-        <p:panel
+        <p:panel id="tcmp5errormsg2"
                 rendered="#{tcmpb.pagemanager.getErrorMessage(4) != null  and  tcmpb.formPortfolioEdit }"
                 style="border: 0px; background: transparent"
                 styleClass="Container100">
-            <h:outputText styleClass="errorText"
+            <h:outputText id="tcmp5errortxt2" styleClass="errorText"
                           value="#{tcmpb.pagemanager.getErrorMessage(4)}" escape="false"/>
         </p:panel>
 
         <div class="EmptyBox10"></div>
-        <p:commandLink styleClass="UI-prevButton Fleft" value="Previous"
+        <p:commandLink id="tcmp5previous" styleClass="UI-prevButton Fleft" value="Previous"
                        rendered="#{tcmpb.pagemanager.prevButtonStat}"
                        update=":ceForm:inputArea" immediate="true"
                        actionListener="#{tcmpb.prevPage}">
             <h:outputText value="Previous"/>
         </p:commandLink>
 
-        <p:commandLink styleClass="UI-nextButton Fright UI-tcmButton"
+        <p:commandLink id="tcmp5next" styleClass="UI-nextButton Fright UI-tcmButton"
                        value="Next" rendered="#{tcmpb.pagemanager.nextButtonStat}"
                        update=":ceForm:inputArea" actionListener="#{tcmpb.nextPage}">
             <h:outputText value="Next"/>
