--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5A.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5A.xhtml
@@ -197,11 +197,11 @@
 					requiredMessage="Please choose one of these choices for appropriate investment">
 					<p:ajax listener="#{tcmpb.doProjectionChart}"
 						update=":ceForm:inputArea" />
-					<f:selectItem class="ProjectionChartRadioAssetsLabel" itemValue="1" />
-					<f:selectItem class="ProjectionChartRadioAssetsLabel" itemValue="2" />
-					<f:selectItem class="ProjectionChartRadioAssetsLabel" itemValue="3" />
-					<f:selectItem class="ProjectionChartRadioAssetsLabel" itemValue="4" />
-					<f:selectItem class="ProjectionChartRadioAssetsLabel" itemValue="5" />
+					<f:selectItem id="tcmp5ainv1" class="ProjectionChartRadioAssetsLabel" itemValue="1" />
+					<f:selectItem id="tcmp5ainv2" class="ProjectionChartRadioAssetsLabel" itemValue="2" />
+					<f:selectItem id="tcmp5ainv3" class="ProjectionChartRadioAssetsLabel" itemValue="3" />
+					<f:selectItem id="tcmp5ainv4" class="ProjectionChartRadioAssetsLabel" itemValue="4" />
+					<f:selectItem id="tcmp5ainv5" class="ProjectionChartRadioAssetsLabel" itemValue="5" />
 				</p:selectOneRadio>
 				<div class="stripe"></div>
 				<table class="ProjectionChartRadioTable">
@@ -219,17 +219,17 @@
 									id="opt4" for="projection" itemIndex="4" /></td>
 						</tr>
 						<tr class="ProjectionChartRadioLabelRow">
-							<td><h:outputLabel for="projection"
+							<td><h:outputLabel id="tcmp5apcon" for="projection"
 									class="ProjectionChartRadioAssetsLabel" value="Conservative" /></td>
-							<td><h:outputLabel for="projection"
+							<td><h:outputLabel id="tcmp5apmcom" for="projection"
 									class="ProjectionChartRadioAssetsLabel"
 									value="Moderately Conservative" /></td>
-							<td><h:outputLabel for="projection"
+							<td><h:outputLabel id="tcmp5apmod" for="projection"
 									class="ProjectionChartRadioAssetsLabel" value="Moderate" /></td>
-							<td><h:outputLabel for="projection"
+							<td><h:outputLabel id="tcmp5apmagg" for="projection"
 									class="ProjectionChartRadioAssetsLabel"
 									value="Moderately Aggressive" /></td>
-							<td><h:outputLabel for="projection"
+							<td><h:outputLabel id="tcmp5apagg" for="projection"
 									class="ProjectionChartRadioAssetsLabel" value="Aggressive" /></td>
 						</tr>
 					</tbody>
@@ -240,7 +240,7 @@
 
 		<!-- customRadio HighChart start  -->
 		<div class="Container80 Responsive100-tcmUI">
-			<p:panel styleClass="GraphPanel" update="beanValueChart"
+			<p:panel id="tcmp5aradiochart" styleClass="GraphPanel" update="beanValueChart"
 				action="#{tcmpb.docustomRadioChart}" />
 			<h:inputHidden value="#{tcmpb.charts.resultChart}"
 				id="beanValueChart" />
@@ -258,7 +258,7 @@
 							<span class="Fs14 DispBlock gray">Average Market
 								Performance</span>
 							<div class="EmptyBox5"></div>
-							<span class="Fs17 DispBlock BBGreen"> <h:outputText
+							<span class="Fs17 DispBlock BBGreen"> <h:outputText id="tcmp5aavgperformance"
 									value="#{tcmpb.charts.avgPerformance}">
 									<f:convertNumber pattern="$#,###,###,##0" />
 								</h:outputText>
@@ -270,7 +270,7 @@
 							<div class="EmptyBox5"></div>
 							<span class="Fs14 DispBlock gray">Poor Market Performance</span>
 							<div class="EmptyBox5"></div>
-							<span class="Fs17 DispBlock BBDarkGray"> <h:outputText
+							<span class="Fs17 DispBlock BBDarkGray"> <h:outputText id="tcmp5apoorperformance"
 									value="#{tcmpb.charts.poorPerformance}">
 									<f:convertNumber pattern="$#,###,###,##0" />
 								</h:outputText>
@@ -285,14 +285,14 @@
 		<!-- customRadio HighChart end  -->
 
 		<div class="EmptyBox10"></div>
-		<p:commandLink styleClass="UI-prevButton Fleft" value="Previous"
+		<p:commandLink id="tcmp5aprevious" styleClass="UI-prevButton Fleft" value="Previous"
 			rendered="#{tcmpb.pagemanager.prevButtonStat}"
 			update=":ceForm:inputArea" immediate="true"
 			actionListener="#{tcmpb.prevPage}">
 			<h:outputText value="Previous" />
 		</p:commandLink>
 
-		<p:commandLink styleClass="UI-nextButton Fright UI-tcmButton"
+		<p:commandLink id="tcmp5anext" styleClass="UI-nextButton Fright UI-tcmButton"
 			value="Next" rendered="#{tcmpb.pagemanager.nextButtonStat}"
 			update=":ceForm:inputArea" actionListener="#{tcmpb.nextPage}">
 			<h:outputText value="Next" />
