--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q3.xhtml
@@ -23,7 +23,7 @@
                 <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
                 <f:selectItem itemLabel="I feel very secure about all my financial needs." itemValue="1" />
-                <f:selectItem itemLabel="I feel fairly secure." itemValue="2" />
+                <f:selectItem itemLabel="I feel somewhat secure." itemValue="2" />
                 <f:selectItem itemLabel="I feel secure for the next 12 months." itemValue="3" />
                 <f:selectItem itemLabel="I don’t feel very secure." itemValue="4" />
                 <f:selectItem itemLabel="I don’t feel at all secure." itemValue="5" />
