--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
@@ -6,31 +6,35 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <p:panel style="border: 0px">
-    <div class="Container100 Responsive50">
-        <div class="ContainerIndent">
-            <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
-                     style="margin-bottom:7px; border: 0px; background: transparent"
-                     styleClass="Container100">
-                <h:outputText styleClass="errorText"
-                              value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
-                <div class="EmptyBox5"></div>
-            </p:panel>
-            <h5>
-                5. What best describes your investment approach?
-            </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans7}"
-                              layout="pageDirection">
-             <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
-                <f:selectItem itemLabel="Aggressive – long-term growth." itemValue="1" />
-                <f:selectItem itemLabel="Moderately aggressive – long-term growth." itemValue="2" />
-                <f:selectItem itemLabel="Conservative – preserve capital more than growth." itemValue="3" />
-                <f:selectItem itemLabel="Ultra conservative – safe with very low risk." itemValue="4" />
-                <f:selectItem itemLabel="No risk – all cash." itemValue="5" />
-            </p:selectOneRadio>
+        <div class="Container100 Responsive50">
+            <div class="ContainerIndent">
+                <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
+                         style="margin-bottom:7px; border: 0px; background: transparent"
+                         styleClass="Container100">
+                    <h:outputText styleClass="errorText"
+                                  value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
 
+                    <div class="EmptyBox5"></div>
+                </p:panel>
+                <h5>
+                    5. What best describes your investment approach?
+                </h5>
+                <p:selectOneRadio value="#{uobpb.riskCalculator.ans7}"
+                                  layout="pageDirection">
+                    <p:ajax listener="#{uobpb.onChangeValue}"
+                            update=":ceForm:workArea, :ceForm:graphArea"/>
+                    <f:selectItem itemLabel="Your primary focus is on capital growth. You are prepared to accept a high level of short term volatility
+                     and possible capital losses in order to generate potentially higher levels of capital growth over the long term.
+" itemValue="1"/>
+                    <f:selectItem itemLabel="You require your investments to be a balance between capital growth and income generating assets.
+" itemValue="2"/>
+                    <f:selectItem itemLabel="Generating a regular income stream is a priority over capital growth.
+" itemValue="3"/>
+
+                </p:selectOneRadio>
+
+            </div>
         </div>
-    </div>
 
     </p:panel>
 
