--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -266,11 +266,9 @@
                                     placeholder="Employer Name">
                             </p:inputText>
                         </div>
-                        <div
-                                class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+                        <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">Occupation *</label>
-
                             <div class="EmptyBox5"></div>
                             <p:inputText id="tdesoccupation"
                                     styleClass="Wid90 FS14 CustomWidthFA-Responsive"
