Prashant 3/14/17 - Various fixes for next release

--- a/Invessence/modules/web/src/main/webapp/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/demo.xhtml
@@ -75,7 +75,7 @@
                         <div class="EmptyBox20"></div>
                         <p:commandButton  value="GetStarted" styleClass="Fs16 BlueButton" type="submit"
                                           actionListener="#{sessionControl.tryOut}"/>
-                        <p:button  value="Login" styleClass="Fs16 OrangeButton" href="/"/>
+                        <p:button  value="Login" styleClass="Fs16 OrangeButton" href="/login.xhtml"/>
                         <p:commandButton  value="Reset" styleClass="Fs16 OrangeButton"
                                           actionListener="#{sessionControl.reset}"/>
                         <div class="EmptyBox50"></div>
