--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q4.xhtml
@@ -21,7 +21,7 @@
             <p:selectOneRadio value="#{uobpb.riskCalculator.ans6}"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                        update=":ceForm:graphArea"/>
                 <f:selectItem itemLabel="Aggressive : An Aggressive Investor is prepared to accept higher risks in order to obtain greater returns.
 An Aggressive Investor is comfortable with investments that are more volatile and bear a higher risk of loss of
 Capital." itemValue="1" />
