--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
@@ -22,7 +22,7 @@
                 <p:selectOneRadio value="#{uobpb.riskCalculator.ans7}"
                                   layout="pageDirection">
                     <p:ajax listener="#{uobpb.onChangeValue}"
-                            update=":ceForm:workArea, :ceForm:graphArea"/>
+                            update=":ceForm:graphArea"/>
                     <f:selectItem itemLabel="Your primary focus is on capital growth. You are prepared to accept a high level of short term volatility
                      and possible capital losses in order to generate potentially higher levels of capital growth over the long term.
 " itemValue="1"/>
