--- a/Invessence/modules/web/src/main/webapp/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/index.xhtml
@@ -23,12 +23,13 @@
                         <div class="EmptyBox20"></div>
 
                         <p:commandButton styleClass="getStartedBtn Fs20" value="Get Started"
-                                         actionListener="#{sessionControl.tryOut}"/>
+                                         actionListener="#{sessionControl.indexGetStarted}"/>
 
                         <div class="EmptyBox10"></div>
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
-                        <p:button value="Login" styleClass="loginStartedBtn Fs16" href="/login.xhtml"/>
+                        <p:commandButton styleClass="loginStartedBtn Fs16" value="Login"
+                                         actionListener="#{sessionControl.indexLogin}"/>
                         <!--
                             <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
                         -->
