--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -6,7 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100">
-        <span class="Fs30">Asset</span>
+        <span class="Fs30">Assets</span>
     </div>
     <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
              style="margin-top: 7px;border: 0px; background: transparent"
@@ -27,7 +27,7 @@
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:workArea, :ceForm:graphArea"/>
+                    update=":ceForm:graphArea"/>
         </p:inputNumber>
 
         <div class="EmptyBox10"></div>
@@ -39,7 +39,7 @@
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:workArea, :ceForm:graphArea"/>
+                    update=":ceForm:graphArea"/>
         </p:inputNumber>
         <!-- <h:outputText/>
     <h:outputText/> -->
@@ -52,7 +52,7 @@
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:workArea, :ceForm:graphArea"/>
+                    update=":ceForm:graphArea"/>
         </p:inputNumber>
 
         <div class="EmptyBox10"></div>
@@ -60,9 +60,11 @@
             <div class="uobBoldText">Investment Properties</div>
             <div class="uobSubText">(Value of property less the mortgage)</div>
         </div>
-        <p:inputNumber
+        <p:inputNumber value="#{uobpb.otherIncome}"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
+            <p:ajax listener="#{uobpb.onChangeValue}"
+                    update=":ceForm:graphArea"/>
         </p:inputNumber>
 
     </div>
