--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
@@ -21,7 +21,7 @@
         <p:selectOneRadio value="#{uobpb.riskCalculator.ans3}"
                           layout="pageDirection">
           <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:workArea, :ceForm:graphArea"/>
+                    update=":ceForm:graphArea"/>
             <f:selectItem itemLabel="My job is very secure." itemValue="1" />
             <f:selectItem itemLabel="My job security could change quickly." itemValue="2" />
             <f:selectItem itemLabel="I am not working or retired but have secure income." itemValue="3" />
