--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q3.xhtml
@@ -21,7 +21,7 @@
             <p:selectOneRadio value="#{uobpb.riskCalculator.ans5}"
                               layout="pageDirection">
                 <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                        update=":ceForm:graphArea"/>
                 <f:selectItem itemLabel="I feel very secure about all my financial needs." itemValue="1" />
                 <f:selectItem itemLabel="I feel somewhat secure." itemValue="2" />
                 <f:selectItem itemLabel="I feel secure for the next 12 months." itemValue="3" />
