--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
@@ -21,7 +21,7 @@
             <p:selectOneRadio value="#{uobpb.riskCalculator.ans8}"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                        update=":ceForm:graphArea"/>
                 <f:selectItem itemLabel="More than 25%" itemValue="1" />
                 <f:selectItem itemLabel="Up to 25%" itemValue="2" />
                 <f:selectItem itemLabel="Up to 5%" itemValue="3" />
